2004-02-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: switch to DB as default, remove save option
	* src/RelLib.py: setup DB environment better
	* src/DbPrompter.py: handle save/open with new DBs

2004-02-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddMedia.py: media reference fixes
	* src/MediaView.py: media reference fixes
	* src/FamilyView.py: commit child changes
	* src/PlaceView.py: ID fixes

2004-02-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WebPage.py: media reference fixes
	* src/plugins/ReadGedcom.py: media reference fixes
	* src/plugins/IndivSummary.py: media reference fixes
	* src/plugins/IndivComplete.py: media reference fixes
	* src/plugins/DetAncestralReport.py: media reference fixes
	* src/plugins/DetDescendantReport.py: media reference fixes
	* src/plugins/Check.py: media reference fixes	
	* src/gramps_main.py: media reference fixes	
	* src/Utils.py: gnome.vfs vs. grampslib
	* src/RelLib.py: single db file, media reference fixes
	* src/MediaView.py: media reference fixes	
	
2004-02-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/RelLib.py (sortbysource): Low-level implementation;
	(sortbyplace): Typo.
	* src/Sources.py (by_title): Remove function (superseded by
	RelLib.GrampsDB.sortbysource).

2004-02-23  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/AddrEdit.py, src/AttrEdit.py, src/EditPerson.py, 
	src/EditSource.py, src/EventEdit.py, src/ImageSelect.py, 
	src/Marriage.py, src/NameEdit.py, src/NoteEdit.py, 
	src/Sources.py, src/UrlEdit.py, src/Witness.py:
	Register windows opened for existing objects. Prevent editing
	same object twice.

2004-02-22  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DetAncestralReport.py: Translation corrections.
	Change "was" to "is".
	* src/plugins/DetDescendantReport.py: Translation corrections.
	Change "was" to "is".
	* src/plugins/FtmStyleAncestors.py (print_more_about): 
	Translate event names. Add description.